--- a/_posts/2017-08-27-waking-up.md
+++ b/_posts/2017-08-27-waking-up.md
@@ -3,9 +3,9 @@ title: Waking up
 slug: waking-up
 date_published: 2017-08-27T00:00:00.000Z
 date_updated: 2017-08-27T00:00:00.000Z
+image: /assets/images/Waking-up/1-C8P1FQQZSUUwEQknW1j1oA.jpeg
 ---
 
-![](/assets/images/Waking-up/1-C8P1FQQZSUUwEQknW1j1oA.jpeg)
 I want to wake up in a cheap motel.
 
 In an insignificant town, with bleak tourist interest, and a native population. Tens of thousands of kilometers from home.
